<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AboutMeApp"

    android:background="@color/primary_dark_material_light">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Robotic&apos;s button"
        android:id="@+id/Roboticbutton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/MyName"
        android:layout_toStartOf="@+id/MyName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cooking button"
        android:id="@+id/cookingbutton"
        android:layout_below="@+id/Roboticbutton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="camp button"
        android:id="@+id/campbutton"
        android:layout_below="@+id/cookingbutton"
        android:layout_toLeftOf="@+id/cookingbutton"
        android:layout_toStartOf="@+id/cookingbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bodie Shane"
        android:id="@+id/MyName"
        android:layout_below="@+id/cookingbutton"
        android:layout_toLeftOf="@+id/Gamebutton"
        android:layout_toStartOf="@+id/Gamebutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game button"
        android:id="@+id/Gamebutton"
        android:layout_alignTop="@+id/Roboticbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="school button"
        android:id="@+id/schoolbutton"
        android:layout_alignTop="@+id/campbutton"
        android:layout_toRightOf="@+id/MyName"
        android:layout_toEndOf="@+id/MyName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me_text"
        android:id="@+id/aboutMeText"
        android:layout_below="@+id/schoolbutton"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextForSchool"
        android:id="@+id/TextForSchool"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/aboutMeText"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextForCamp"
        android:id="@+id/TextForCamp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/TextForSchool"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Cooking_text"
        android:text="@string/TextForCooking"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Robotics_text"
        android:text="@string/TextForRobotics"
        android:layout_toRightOf="@+id/aboutMeText"
        android:layout_toEndOf="@+id/aboutMeText"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Robotics"
        android:background="@drawable/first_robotics"
        android:layout_below="@+id/schoolbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:visibility="gone" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cooking"
        android:background="@drawable/cooking"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/camp"
        android:layout_toEndOf="@+id/camp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bodieshanepic"
        android:background="@drawable/funny_teen_quote_cartoon_image"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Gaming"
        android:layout_marginTop="39dp"
        android:background="@drawable/gaming"
        android:layout_below="@+id/schoolbutton"
        android:layout_toRightOf="@+id/camp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schoolpic"
        android:layout_marginTop="70dp"
        android:background="@drawable/school"
        android:layout_below="@+id/schoolbutton"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextForGames"
        android:id="@+id/games_text"
        android:layout_below="@+id/schoolbutton"
        android:layout_alignRight="@+id/cookingbutton"
        android:layout_alignEnd="@+id/cookingbutton"
        android:layout_marginTop="124dp"
        android:visibility="gone" />

</RelativeLayout>
